# github-repos-data-exploration

./: .gitignore  Dockerfile  Makefile  README.md  exploration.ipynb  process_data.py  profiles.yml  pyproject.toml
blocks/: make_gcp_blocks.py
dbt_github_repos/: dbt_project.yml
dbt_github_repos/models/core/: sample_repos__file_contents_last_updated.sql
dbt_github_repos/models/staging/: schema.yml  stg_repos__last_updated.sql  stg_repos__python.sql
flows/: dbt_bq_processing.py  elt_bq_to_gcs.py  gcp_block.py
github_repos_data_exploration/models/core/: repos__file_contents_last_updated.sql  sample_repos__file_contents_last_updated.sql  schema.yml
github_repos_data_exploration/models/staging/: stg_repos__last_updated.sql
sample_data/: sample_output_year=2022_month=3_date=1_part-00001-c851dc2b-76f8-4835-83b5-aa64afa4ea66.c000.snappy.parquet
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
