[tool.poetry]
name = "github-repos-data-exploration"
version = "0.1.0"
description = "Analysing the Open Source GitHub repositories using Data Engineering Tools"
authors = ["Baldeep Singh <handabaldeep@gmail.com>"]
readme = "README.md"
packages = [{include = "github_repos_data_exploration"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.0"
pyspark = "^3.4.0"
prefect = "^2.10.9"
prefect-dbt = {extras = ["bigquery"], version = "^0.3.1"}


[tool.poetry.group.experiment.dependencies]
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
